# config

./: .Xmodmap  .Xresources  .conky.lua  .conkyrc  .fonts.conf  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .mayu  .mfiler  .rtorrent.rc  .screenrc  .tmux.conf  .vimrc  .xinitrc  .xmobarrc  .xpdfrc  .zprofile  .zshrc  Makefile  biome.json  build  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  xmobar.hs  xmonad-config.cabal  xmonad.hs
.mfiler3/: mfiler3.sa
.ncmpcpp/: config
.opera/: override.ini  search.ini
.xmonad/: xmonad.hs
alacritty/: alacritty.toml
cabal/: config
cbits/: pa-volume-monitor.c
dotfiles/: .Xresources  .bash_profile  .bashrc  .ghci  .gtkrc-2.0  .inputrc  .my.cnf  .uim  .xinitrc  .zprofile  .zshenv  .zshrc  dot.Xmodmap  dot.Xresources  dot.bashrc  dot.conkyrc  dot.fonts.conf  dot.ghci  dot.inputrc  dot.screenrc  dot.tmux.conf  dot.uim  dot.xinitrc  dot.zprofile  dot.zshrc
etc/: fstab  hosts.allow  hosts.deny  make.conf  mpd.conf  resolv.conf
fish/: config.fish
fontconfig/: aliases.conf  fonts.conf
gentoo/: fstab  make.conf  sync.sh  syncfiles
git/: config
linux/: .config  dot.config
mac/: .zprofile  Bitter.itermcolors  Bitter.terminal  Japanese.itermcolors  Modern.terminal  Univers.itermcolors  karabiner.json  setup.sh
macos/: install.sh  setup-locale.sh  setup.sh
mozc/: keyconfig
mpv/: fonts  input.conf  mpv.conf
ncmpcpp/: bindings  config
xmobar/: .gitignore  Makefile  build  xmobar-config.cabal  xmobar.hs
xmobar/icons/: layout-tall.xbm  layout-threecol.xbm
xmobar/lib/Monitors/: PulseAudio.hs
(+484 files in other folders)
