cabal-version:      2.4
name:               xmobar-config
version:            0.1.0.0

executable xmobar
  main-is:            ../xmobar.hs
  ghc-options:        -threaded -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-top-binds
  other-modules:      Monitors.CatNum
                    , Monitors.PulseAudio
  build-depends:      base
                    , filepath
                    , mtl
                    , xmobar
  extra-libraries:    pulse
  C-sources:          cbits/pa-volume-monitor.c
  hs-source-dirs:     lib
  default-language:   Haskell2010

